[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
google-oauth = "1.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["base64"] }
serde_json = "1.0.107"
rand = "0.8.5"
azure_data_cosmos = "0.16.0"
azure_core = "0.16.0"
futures = "0.3.28"
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
base64 = "0.21.5"
log = "0.4.20"